# bookmarks-parser

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  setup.py
bookmarks_parser/: __init__.py  bookmarks_parser.py
tests/: test_parse.py
tests/tests_data/: chrome_bookmarks.html  chrome_bookmarks.json  firefox_bookmarks.html  firefox_bookmarks.json  ready_data.py
